infra/eventstore/bridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bridge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bridge.dsdemo.valesordev.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: bridge-bridge-service
                port:
                  number: 8080
